--- a/WebContent/layout/head.xhtml
+++ b/WebContent/layout/head.xhtml
@@ -3,7 +3,8 @@
     xmlns:ui="http://java.sun.com/jsf/facelets"
     xmlns:f="http://java.sun.com/jsf/core"
     xmlns:c="http://java.sun.com/jsp/jstl/core"
-    xmlns:h="http://java.sun.com/jsf/html">      
+    xmlns:h="http://java.sun.com/jsf/html"
+    xmlns:jsf="http://xmlns.jcp.org/jsf">      
  
     <h:head>
         <meta HTTP-EQUIV="Content-Type" CONTENT="text/html;charset=ISO-8859-1"/>
@@ -13,6 +14,8 @@
         <h:outputStylesheet name="css/animate.css"/>
         <h:outputStylesheet name="css/style.css"/>
         <h:outputStylesheet name="css/font-awesome.min.css"/>
+        <h:outputStylesheet name="css/plugins/chosen/bootstrap-chosen.css"/>
+<!-- 		<h:outputScript library="primefaces" name="jquery/jquery.js" target="head" /> -->
 		
     </h:head>
 </ui:composition>
