--- a/WebContent/layout/menu.xhtml
+++ b/WebContent/layout/menu.xhtml
@@ -7,21 +7,13 @@
                     <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                         <span class="block m-t-xs font-bold">#{gestionLogin.usuario.nombre}</span>
                     </a>
-                    
-                    <ul class="dropdown-menu animated fadeInRight m-t-xs">
-                        <li><a class="dropdown-item" href="profile.html">Profile</a></li>
-                        <li><a class="dropdown-item" href="contacts.html">Contacts</a></li>
-                        <li><a class="dropdown-item" href="mailbox.html">Mailbox</a></li>
-                        <li class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="login.html">Logout</a></li>
-                    </ul>
                 </div>
                 <div class="logo-element">
                     IN+
                 </div>
             </li>
             <li>
-                <a href="menuPrincipal.xhtml"><i class="fa fa-th-large"></i> <span class="nav-label">Usuarios</span> <span class="fa arrow"></span></a>
+                <a href="menuUsuarios.xhtml"><i class="fa fa-th-large"></i> <span class="nav-label">Usuarios</span> <span class="fa arrow"></span></a>
             </li>
             <li>
                 <a href=""><i class="fa fa-th-large"></i> <span class="nav-label">Formularios</span> <span class="fa arrow"></span></a>
@@ -34,14 +26,13 @@
                 <a href="menuCasillas.xhtml"><i class="fa fa-th-large"></i> <span class="nav-label">Casillas</span> <span class="fa arrow"></span></a>
             </li>
             <li>
-<<<<<<< HEAD
                 <a href="menuEstaciones.xhtml"><i class="fa fa-th-large"></i> <span class="nav-label">Estaciones</span> <span class="fa arrow"></span></a>
             </li>
             <li>
+                <a href="menuMediciones.xhtml"><i class="fa fa-th-large"></i> <span class="nav-label">Mediciones</span> <span class="fa arrow"></span></a>
+            </li>
+            <li>
                 <a href=""><i class="fa fa-diamond"></i> <span class="nav-label">Configuraciones</span></a>
-=======
-                <a href="layouts.html"><i class="fa fa-diamond"></i> <span class="nav-label">Configuraciones</span></a>
->>>>>>> a3335872383358a7fc4a38fe17c2e9e01fee9019
                 <ul class="nav nav-second-level collapse">
                     <li><a href="menuDepartamentos.xhtml">Departamentos</a></li>
                     <li><a href="menuCiudades.xhtml">Ciudades</a></li>
