--- a/WebContent/views/frmFormularios.xhtml
+++ b/WebContent/views/frmFormularios.xhtml
@@ -12,7 +12,7 @@
 	        <div class="row">
 	            <div class="col-lg-12">
 	                <div class="ibox float-e-margins">
-	                    <div class="ibox-title"><h:head></h:head>
+	                    <div class="ibox-title">
 	                        <h5>
 	                            <i class="fa fa-edit"></i> Formulario / Editar/Crear
 	                        </h5>
