--- a/WebContent/views/frmEstaciones.xhtml
+++ b/WebContent/views/frmEstaciones.xhtml
@@ -14,7 +14,7 @@
 	                <div class="ibox float-e-margins">
 	                    <div class="ibox-title"><h:head></h:head>
 	                        <h5>
-	                            <i class="fa fa-edit"></i> Estaciones / Editar/Crear
+	                            <i class="fa fa-edit"></i> Estaciones
 	                        </h5>
 	                        <div class="ibox-tools">
 	                            <a class="collapse-link">
@@ -65,7 +65,7 @@
 										<label class="control-label">Latitud</label>
 									</div>
                                     <div class="col-sm-6">
-                                    	<input class="form-control" placeholder="Latitud" type="text" jsf:id="latitud" name="latitud" value="#{gestionEstaciones.estacion.latitud}"/>
+                                    	<input class="form-control" placeholder="Latitud" type="number" jsf:id="latitud" name="latitud" value="#{gestionEstaciones.estacion.latitud}"/>
                                     	<p:message for="latitud" style="color:red" />
                                    	</div>
 								</div>
