--- a/WebContent/views/menuDepartamentos.xhtml
+++ b/WebContent/views/menuDepartamentos.xhtml
@@ -16,52 +16,40 @@
 		                    <h5>Lista de Departamentos</h5>
 		                </div>
 		                <div class="ibox-content">
-		                    <div class="input-group">
-						        <input type="text" class="form-control" id="filter"  placeholder="Buscar..."/>
-						        <span class="input-group-btn">
-						            <a class="btn btn-success" href="frmDepartamentos.xhtml">
-						             	<i class="fa fa-plus"></i> Nuevo
-					             	</a>
-		                        </span>
-						    </div>
 						    <form jsf:id="departamentos">
 			                    <div class="table-responsive">
-			                    	<table class="footable table table-stripped">
-		                                <thead>
-		                                    <tr>
-		                                        <th>ID</th>
-		                                        <th data-hide="phone,tablet">Nombre</th>
-		                                        <th class="text-right">Acciones</th>
-		                                    </tr>
-		                                </thead>
-		                                <tbody>
-					                    	<p:repeat value="#{gestionDepartamentos.listar()}" var="departamento">
-					                    		<tr> 
-					                    			<td>#{departamento.id}</td>
-					                    			<td>#{departamento.nombre}</td>
-					                    			<td class="text-right">
-					                    				<p:link outcome="frmDepartamentos.xhtml">
-												      		<f:param name="id" value="${departamento.id}"/>
-											    			<f:param name="modalidad" value="update" />
-											                <i class="btn btn-xs btn-default fa fa-edit"></i>
-												         </p:link>
-												         <p:spacer width="2" />
-												         <p:commandLink action="#{gestionDepartamentos.eliminarDepartamento()}">
-												      		<f:param name="id" value="${departamento.id}"/>
-												      		<i class="btn btn-xs btn-danger fa fa-trash"></i>
-												         </p:commandLink>
-					                    			</td>
-					                    		</tr>
-					                    	</p:repeat>
-				                    		<tfoot>
-		                                        <tr>
-		                                            <td colspan="5">
-		                                                <ul class="pagination pull-left"></ul>
-		                                            </td>
-		                                        </tr>
-		                                    </tfoot>
-		                                </tbody>
-			                    	</table>
+			                    	<p:dataTable var="departamento" widgetVar="dtDepartamentos" value="#{gestionDepartamentos.listar()}" rowKey="#{departamento.id}" reflow="true" styleClass="products-table">
+				                    	<f:facet name="header">
+							                <div class="input-group">
+							                    <p:inputText id="globalFilter" onkeyup="PF('dtDepartamentos').filter()" class="form-control" placeholder="Busqueda global"/>
+							                    <span class="filter-container ui-input-icon-left" > 
+							                       	<h:link outcome ="frmDepartamentos.xhtml" class="btn btn-success">
+										    			<f:param name="modalidad" value="insert" /><i class="pi pi-plus"></i> Nuevo
+													</h:link>
+							                    </span>
+							                </div>
+							            </f:facet>
+										<p:column headerText="Nombre" filterBy="#{departamento.nombre}">
+							                <h:outputText value="#{departamento.nombre}"/>
+							            </p:column>
+										<p:column headerText="Acciones">
+											<p:link outcome="frmDepartamentos.xhtml">
+									      		<f:param name="id" value="${departamento.id}"/>
+								    			<f:param name="modalidad" value="update" />
+								                <i class="btn btn-xs btn-default pi pi-pencil"></i>
+									        </p:link>
+									        <p:spacer width="2" />
+									        <p:commandLink action="#{gestionDepartamentos.eliminarDepartamento()}">
+									      		<f:param name="id" value="${departamento.id}"/>
+									      		<i class="btn btn-xs btn-danger pi pi-trash"></i>
+									         	<p:confirm header="Confirmacion" message="¿Quiere eliminar este registro?" icon="pi pi-info-circle"/>
+								        	</p:commandLink>
+								         	<p:confirmDialog global="true" showEffect="fade" hideEffect="fade" responsive="true" width="350">
+									            <p:commandButton value="No" type="button" styleClass="ui-confirmdialog-no ui-button-flat"/>
+									            <p:commandButton value="Si" type="button" styleClass="ui-confirmdialog-yes" />
+								        	</p:confirmDialog>
+										</p:column>
+									</p:dataTable>
 								</div>
 							</form>
 		            	</div>
