--- a/WebContent/layout/header.xhtml
+++ b/WebContent/layout/header.xhtml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
-<nav class="navbar navbar-static-top  " role="navigation" style="margin-bottom: 0">
+<nav class="navbar navbar-static-top  " role="navigation" style="margin-bottom: 0" xmlns:p="http://java.sun.com/jsf/html"
+                                                                                   xmlns:h="http://java.sun.com/jsf/html">
     <div class="navbar-header">
-        <a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="#"><i class="fa fa-bars"></i> </a>
+        <a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="#"><i class="pi pi-bars"></i> </a>
     </div>
 	<ul class="nav navbar-top-links navbar-right">
 	    <li>
 	        <span class="m-r-sm text-muted welcome-message">Bienvenido #{gestionLogin.usuario.nombre}</span>
 	    </li>
 	    <li>
-	        <a href="Login.xhtml">
-	            <i class="fa fa-sign-out"></i> Salir
-	        </a>
+	    	<h:form>
+		        <p:commandLink type="submit"  action="#{gestionLogin.logout}">
+		            <i class="pi pi-sign-out"></i> Salir
+		        </p:commandLink>
+	        </h:form>
 	    </li>
 	</ul>
 </nav>
