--- a/WebContent/views/menuCasillas.xhtml
+++ b/WebContent/views/menuCasillas.xhtml
@@ -16,62 +16,55 @@
 		                    <h5>Lista de Casillas</h5>
 		                </div>
 		                <div class="ibox-content">
-		                    <div class="input-group">
-						        <input type="text" class="form-control" id="filter"  placeholder="Buscar..."/>
-						        <span class="input-group-btn">
-						            <a class="btn btn-success" href="frmCasillas.xhtml">
-						             	<i class="fa fa-plus"></i> Nuevo
-					             	</a>
-		                        </span>
-						    </div>
 						    <form jsf:id="casillas">
 			                    <div class="table-responsive">
-			                    	<table class="footable table table-stripped">
-		                                <thead>
-		                                    <tr>
-		                                        <th>ID</th>
-		                                        <th data-hide="phone,tablet">Nombre</th>
-		                                        <th data-hide="phone,tablet">Unidad de medida</th>
-		                                        <th data-hide="phone,tablet">Tipo de valor</th>
-		                                        <th data-hide="phone,tablet">Ubicacion</th>
-		                                        <th data-hide="phone,tablet">Obligatoria</th>
-		                                        <th data-hide="phone,tablet">Descripcion</th>
-		                                        <th class="text-right">Acciones</th>
-		                                    </tr>
-		                                </thead>
-		                                <tbody>
-					                    	<p:repeat value="#{gestionCasillas.listar()}" var="casilla">
-					                    		<tr> 
-					                    			<td>#{casilla.id}</td>
-					                    			<td>#{casilla.nombre}</td>
-					                    			<td>#{casilla.unidad_de_medida}</td>
-					                    			<td>#{casilla.tipo}</td>
-					                    			<td>#{casilla.ubicacion}</td>
-					                    			<td>#{casilla.obligatoria}</td>
-					                    			<td>#{casilla.descripcion}</td>
-					                    			<td class="text-right">
-					                    				<p:link outcome="frmCasillas.xhtml">
-												      		<f:param name="id" value="${casilla.id}"/>
-											    			<f:param name="modalidad" value="update" />
-<!-- 											                <i class="btn btn-xs btn-default fa fa-edit"></i> -->
-												         </p:link>
-												         <p:spacer width="2" />
-												         <p:commandLink action="#{gestionCasillas.eliminarCasilla()}">
-												      		<f:param name="id" value="${casilla.id}"/>
-												      		<i class="btn btn-xs btn-danger fa fa-trash"></i>
-												         </p:commandLink>
-					                    			</td>
-					                    		</tr>
-					                    	</p:repeat>
-				                    		<tfoot>
-		                                        <tr>
-		                                            <td colspan="5">
-		                                                <ul class="pagination pull-left"></ul>
-		                                            </td>
-		                                        </tr>
-		                                    </tfoot>
-		                                </tbody>
-			                    	</table>
+			                    	<p:dataTable var="casilla" widgetVar="dtCasillas" value="#{gestionCasillas.listar()}" rowKey="#{casilla.id}" reflow="true" styleClass="products-table">
+				                    	<f:facet name="header">
+							                <div class="input-group">
+							                    <p:inputText id="globalFilter" onkeyup="PF('dtCasillas').filter()" class="form-control" placeholder="Busqueda global"/>
+							                    <span class="filter-container ui-input-icon-left" > 
+							                       	<h:link outcome ="frmCasillas.xhtml" class="btn btn-success">
+										    			<f:param name="modalidad" value="insert" /><i class="pi pi-plus"></i> Nuevo
+													</h:link>
+							                    </span>
+							                </div>
+							            </f:facet>
+										<p:column headerText="Nombre" filterBy="#{casilla.nombre}">
+							                <h:outputText value="#{casilla.nombre}"/>
+							            </p:column>
+							            <p:column headerText="Unidad de medida" filterBy="#{casilla.unidad_de_medida}">
+							                <h:outputText value="#{casilla.unidad_de_medida}"/>
+							            </p:column>
+							            <p:column headerText="Tipo" filterBy="#{casilla.tipo}">
+							                <h:outputText value="#{casilla.tipo}"/>
+							            </p:column>
+							            <p:column headerText="Ubicacion" filterBy="#{casilla.ubicacion}">
+							                <h:outputText value="#{casilla.ubicacion}"/>
+							            </p:column>
+							            <p:column headerText="Obligatorio" filterBy="#{casilla.obligatoria}">
+							                <h:outputText value="#{casilla.obligatoria}"/>
+							            </p:column>
+							            <p:column headerText="Descripcion" filterBy="#{casilla.descripcion}">
+							                <h:outputText value="#{casilla.descripcion}"/>
+							            </p:column>
+										<p:column headerText="Acciones">
+											<p:link outcome="frmCasillas.xhtml">
+									      		<f:param name="id" value="${casilla.id}"/>
+								    			<f:param name="modalidad" value="update" />
+								                <i class="btn btn-xs btn-default pi pi-pencil"></i>
+									        </p:link>
+									        <p:spacer width="2" />
+									        <p:commandLink action="#{gestionCasillas.eliminarCasilla()}">
+									      		<f:param name="id" value="${casilla.id}"/>
+									      		<i class="btn btn-xs btn-danger pi pi-trash"></i>
+									        <p:confirm header="Confirmacion" message="¿Quiere eliminar este registro?" icon="pi pi-info-circle"/>
+									        </p:commandLink>
+								         	<p:confirmDialog global="true" showEffect="fade" hideEffect="fade" responsive="true" width="350">
+									            <p:commandButton value="No" type="button" styleClass="ui-confirmdialog-no ui-button-flat"/>
+									            <p:commandButton value="Si" type="button" styleClass="ui-confirmdialog-yes" />
+								        	</p:confirmDialog>
+										</p:column>
+									</p:dataTable>
 								</div>
 							</form>
 		            	</div>
