--- a/WebContent/views/FrmUser.xhtml
+++ b/WebContent/views/FrmUser.xhtml
@@ -91,7 +91,7 @@
 										<label class="control-label">Contraseña</label>
 									</div>
                                     <div class="col-sm-6">
-                                    	<input class="form-control" placeholder="Contraseña" type="text" jsf:id="contrasena" name="contrasena" value="#{gestionUsuarios.contrasena}"/>
+                                    	<input class="form-control" placeholder="Contraseña" type="password" jsf:id="contrasena" name="contrasena" value="#{gestionUsuarios.contrasena}"/>
                                    		<p:message for="contrasena" style="color:red" />
                                    	</div>
                                 </div>
