--- a/WebContent/views/frmEstaciones.xhtml
+++ b/WebContent/views/frmEstaciones.xhtml
@@ -75,7 +75,7 @@
 										<label class="control-label">Longitud</label>
 									</div>
                                     <div class="col-sm-6">
-                                    	<input type="text" class="form-control" placeholder="Longitud" jsf:id="longitud" name="longitud" value="#{gestionEstaciones.estacion.longitud}"/>
+                                    	<input type="number" class="form-control" placeholder="Longitud" jsf:id="longitud" name="longitud" value="#{gestionEstaciones.estacion.longitud}"/>
                                         <p:message for="longitud" style="color:red" />
                                    	</div>
 								</div>
