--- a/WebContent/views/frmFormularioCasilla.xhtml
+++ b/WebContent/views/frmFormularioCasilla.xhtml
@@ -68,7 +68,7 @@
 			
                                 <div class="form-group">
                                     <div class="col-sm-4 col-sm-offset-2">
-                                        <a class="btn btn-white" href="menuCiudades.xhtml"> Cancelar</a>
+                                        <a class="btn btn-white" href="menuFormularioCasilla.xhtml"> Cancelar</a>
                                         <h:commandButton value="Guardar" rendered="#{!gestionFormularios.modoEdicion}" 
 											update=":form" action="#{gestionFormularios.agregarCasilla()}" class="btn btn-primary">
 										    	<f:param name="id" value="${gestionFormularios.id}" />
