--- a/WebContent/views/frmFormularios.xhtml
+++ b/WebContent/views/frmFormularios.xhtml
@@ -14,7 +14,7 @@
 	                <div class="ibox float-e-margins">
 	                    <div class="ibox-title">
 	                        <h5>
-	                            <i class="fa fa-edit"></i> Formulario / Editar/Crear
+	                            <i class="fa fa-edit"></i> Formulario
 	                        </h5>
 	                        <div class="ibox-tools">
 	                            <a class="collapse-link">
@@ -45,7 +45,7 @@
 										<label class="control-label">Comentarios</label>
 									</div>
                                     <div class="col-sm-6">
-                                    	<input class="form-control" placeholder="Comentarios" type="text" jsf:id="comentario" name="comentario" value="#{gestionFormularios.formulario.comentario}" required="true"/>
+                                    	<input class="form-control" placeholder="Comentarios" type="text" jsf:id="comentario" name="comentario" value="#{gestionFormularios.formulario.comentario}"/>
                                     	<p:message for="nombre" style="color:red" />
                                    	</div>
 								</div>
