--- a/WebContent/views/menuFormularioCasilla.xhtml
+++ b/WebContent/views/menuFormularioCasilla.xhtml
@@ -16,6 +16,14 @@
 		                    <h5>Lista de formularios con casillas</h5>
 		                </div>
 		                <div class="ibox-content">
+		                	<div class="input-group">
+						        <input type="text" class="form-control" id="filter"  placeholder="Buscar..."/>
+						        <span class="input-group-btn">
+						            <a class="btn btn-success" href="frmFormularioCasilla.xhtml">
+						             	<i class="fa fa-plus"></i> Nuevo
+					             	</a>
+		                        </span>
+						    </div>
 						    <form jsf:id="departamentos">
 			                    <div class="table-responsive">
 			                    	<table class="footable table table-stripped">
