--- a/WebContent/views/frmCasillas.xhtml
+++ b/WebContent/views/frmCasillas.xhtml
@@ -101,7 +101,7 @@
 										<label class="control-label">Descripción</label>
 									</div>
                                     <div class="col-sm-6">
-                                    	<input class="form-control" placeholder="Descripción" type="text" jsf:id="descripcion" name="descripcion" value="#{gestionCasillas.casilla.descripcion}" required="false"/>
+                                    	<input class="form-control" placeholder="Descripción" type="text" jsf:id="descripcion" name="descripcion" value="#{gestionCasillas.casilla.descripcion}"/>
                                     	<p:message for="nombre" style="color:red" />
                                    	</div>
 								</div>
