--- a/WebContent/views/frmMediciones.xhtml
+++ b/WebContent/views/frmMediciones.xhtml
@@ -70,7 +70,7 @@
 								
 								<div class="form-group">
                                     <div class="col-sm-4 col-sm-offset-2">
-                                        <a class="btn btn-white" href="menuUsuarios.xhtml"> Cancelar</a>
+                                        <a class="btn btn-white" href="menuMediciones.xhtml"> Cancelar</a>
                                         <h:commandButton value="Guardar" action="#{gestionMediciones.insertFormulario()}" class="btn btn-primary" />
                                     </div>
                                 </div>
